--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(DS array.c node.c utils.c)
+add_library(DS array.c graph.c utils.c)
 target_include_directories(DS
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
